# LeKiwi-runtime

./: .gitignore  ChrisREADME.md  README.md  main.py  main_remote.py  main_sentry.py  main_sentry_caller.py  main_voice_only.py  main_workflows.py  post_sentry.py  pyproject.toml  sentry.py
lekiwi/: host.py
lekiwi-subset-45/data/: data-00000-of-00001.arrow  dataset_info.json  state.json
lekiwi-subset-45/meta/: info.json
lekiwi/navigation/: __init__.py  navigator.py
lekiwi/personality/: system.txt
lekiwi/recordings/: .gitignore
lekiwi/recordings/arm/: excited_wiggle.csv  greeting.csv  idle.csv  (+5 more)
lekiwi/robot/: __init__.py  arm_adapter.py  lekiwi.py
lekiwi/services/: __init__.py  base.py
lekiwi/vision/: __init__.py  buffers.py  camera_hub.py  face.py  quality.py
lekiwi/viz/: rerun_viz.py
lekiwi/workflows/: workflows.py
nav/: __init__.py  combined_viewer.py  distance_driver.py  face_tracker.py  mono-test.py  nav.py  thigh_tracker.py
rerun/: main.py
scripts/: camera.py  download_subset.py  fall_and_navigate.py  list_cameras.py  record_arm.py  record_episode.py  record_wheels.py  replay.py  run_policy.py  teleoperate.py  test_audio.py  test_cameras.py  test_livekit_audio_input.py  test_pose_detection.py  test_pose_rerun.py  test_pose_viewer.py  test_post_sentry.py  turn_off.py  upload_lerobot_subset.py  upload_subset.py  view_pose_stream.py
scripts/autopilot/: observe.py
scripts/operate/: record_arm.py  record_arm_direct.py  record_wheels.py  replay_arm_direct.py  teleoperate.py
scripts/tests/: test_cameras.py
setup/: .asoundrc  setup_audio.sh
(+17 files in other folders)
